<resources>
    <string name="app_name">IDnow Online-Ident</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="image_description">Image Description</string>
    <string name="please_wait">Please wait ...</string>
    <string name="permission_failed_continue">Please grant the required permissions in order to continue with the identification.</string>
    <string name="permission_failed_break">In order to continue with the identification you need to grant the required permissions. The process was aborted.</string>
    <string name="permissions_intro_video">The following permissions are necessary to continue with the identification: \n</string>
    <string name="permissions_intro_end">.\nPlease confirm the permissions in order to use this function.</string>
    <string name="permissions_intro_photo">Please grant the required permissions in order to continue with the photo identification: \n</string>
    <string name="permission_camera">Use camera</string>
    <string name="permission_audio">Create audio files</string>
    <string name="permission_storage">Temporarily save photos on your mobile device</string>
    <string name="required_field">Invalid phone number</string>
    <string name="wrong_token">Invalid entry</string>
    <string name="start_screen_accept">Confirm</string>
    <string name="start_screen_placeholder">Enter your transaction number</string>
    <string name="start_screen_ident_explanation">How does the identification work?</string>
    <string name="error_flash">The camera flash couldn\'t be activated.</string>
    <string name="powered_by_idnow">powered by</string>
    <string name="title_live_stream_screen">Connect &#8230;</string>
    <string name="swapStr">Swap camera</string>
    <string name="endCall1">End call</string>
    <string name="endCall2">End</string>
    <string name="audioOnly">Audio only</string>
    <string name="send">Send</string>
    <string name="archivingOn">Archiving on</string>
    <string name="archivingOff">Archiving off</string>
    <string name="notification">Ongoing call</string>
    <string name="menu_settings">Settings</string>
    <string name="notification_content">Aktiver Anruf</string>
    <string name="title_activity_result">IDnow</string>
    <string name="ident_done_successful">Identification Completed</string>
    <string name="ident_done_failed">Identification Failed</string>
    <string name="step_start">Please wait while you are being connected with one of our Identification Experts. This can take up to two minutes.</string>
    <string name="step_say_name">Please look into the camera and state your first names and surname in full.</string>
    <string name="step_id_front">Please hold the front side of your identity document into the camera, so we can read the details.</string>
    <string name="step_id_wiggle">Please tilt your document up and down, so we can see it\'s security features.</string>
    <string name="step_id_empty_string"></string>
    <string name="step_id_read_no">Please read out loud the number of your identity document. You\'ll find it on the front in the top right corner.</string>
    <string name="step_id_back">Please hold the back side of your identity document into the camera, so we can read the details.</string>
    <string name="step_finished">Thank you for using our online identification service!</string>
    <string name="step_esigning_wait">One moment please …</string>
    <string name="step_wait_long">All our Identification Experts are busy due to high demand. This will result in longer waiting times than usual. The identification service is available Monday to Sunday from 8 a.m. to 12 a.m.</string>
    <string name="network_dialog_title">Network Error</string>
    <string name="network_connection_failure">An Internet Connection is required for the identification. Please connect to your mobile device to the internet and try again.</string>
    <string name="dialog_error_title">Connection Error</string>
    <string name="dialog_error_content">An unexpected error occurred. The connection is being shut down.</string>
    <string name="dialog_error_camera_title">Camera Error</string>
    <string name="dialog_error_camera_content">An error occurred while trying to access your camera. Please try again later.</string>
    <string name="wrong_entry">Invalid Entry</string>
    <string name="dialog_cancel_identification_title">Cancel Identification</string>
    <string name="dialog_cancel_identification">Do you really want to cancel the identification?</string>
    <string name="rest_dialog_error_title">Error</string>
    <string name="rest_dialog_error_content_400">The Ident-Code is incorrect. Please re-enter your Ident-Code.</string>
    <string name="rest_dialog_error_content_404">Your transaction number is not correct. Please check and try again.</string>
    <string name="rest_dialog_error_content_410">Your version of this app is outdated. Please update your app to the latest version in the app store and try again.</string>
    <string name="rest_dialog_error_content_412">The identification for this transaction number has already been completed and cannot be restarted</string>
    <string name="rest_dialog_error_content_500">Unfortunately an internal error has occurred. Please contact our support under support@mail.idnow.de and state the following error number: #exceptionID</string>
    <string name="rest_dialog_error_content_503">IDnow is currently under maintenance and will be available again soon. Please be patient and come back in a few minutes.</string>
    <string name="dialog_no_wifi_cancel">Cancel</string>
    <string name="dialog_no_wifi_continue">Continue</string>
    <string name="dialog_no_wifi_content">We advice you to use a WiFi connection for the video identification.</string>
    <string name="dialog_retry">Try again</string>
    <string name="dialog_play_store">Go to Play Store</string>
    <string name="dialog_error">Identification failed. Please check your internet connection and try again.</string>
    <string name="dialog_error_mobile_no">Your request for an Ident-Code to be sent to your mobile phone failed. Please try again.</string>
    <string name="dialog_error_tan">The Ident-Code is incorrect. Please re-enter your Ident-Code.</string>
    <string name="dialog_error_video">Identification failed. A problem has occurred with the video connection. Please try again.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_office_hours_content_1">You are calling the Video-Ident Service outside our opening hours.\n\nYou can start your identification during the following times. An appointment is not necessary.\n\nOur Opening Hours:\n\n</string>
    <string name="dialog_office_hours_content_2">\nPlease restart your identification during our opening hours.</string>
    <string name="dialog_office_hours_title">Opening Hours</string>
    <string name="title_activity_first_step">IDnow</string>
    <string name="first_step_intro_text">How it works: </string>
    <string name="first_step_ident_text">Please enter and confirm your transaction number to start the identification.</string>
    <string name="first_step_1_text">Please have your identity document readily available.</string>
    <string name="first_step_2_text">Enter your transaction number above and start the identification.</string>
    <string name="first_step_3_text">Follow the instructions that will guide you through the identification.</string>
    <string name="first_step_4_text">Your identification will be completed in a matter of minutes.</string>
    <string name="first_step_next">Confirm</string>
    <string name="title_activity_second">IDnow</string>
    <string name="second_step_intro_text">In order to start the identification, the following is required:</string>
    <string name="second_step_mobile_nr_title">Your mobile phone number</string>
    <string name="second_step_mobile_nr_text">We will send you an Ident-Code to this mobile number by SMS during the identification.</string>
    <string name="second_step_mobile_nr_hint">+4917610305431</string>
    <string name="second_step_id_title">Your readily available identity document</string>
    <string name="second_step_id_text">Your identity document will be checked during the identification, so please have it ready and at hand.</string>
    <string name="second_step_recording_title">Your consent</string>
    <string name="second_step_recording_text">By starting the Identification, you agree to the making of the following: images of yourself, your identity document and a sound recording of the conversation.</string>
    <string name="second_step_id_help">Which identity documents are supported?</string>
    <string name="second_step_approval_title">Consent</string>
    <string name="second_step_approval_text">I agree to the IDnow Terms of Service and have read the Privacy Policy.</string>
    <string name="second_step_terms_of_use"><a href="http://www.idnow.eu/terms">Terms of Service</a></string>
    <string name="second_step_privacy_policy"><a href="http://www.idnow.eu/privacy">Privacy Policy</a></string>
    <string name="second_step_approval_help">What is my data used for?</string>
    <string name="insert_tan_title">Enter Ident-Code</string>
    <string name="insert_tan_text">Your Ident-Code has been sent to the following phone number by SMS: xxx. Please enter and confirm your Ident-Code to continue.</string>
    <string name="insert_tan_forgot_tan">Didn\'t receive an Ident-Code or entered a wrong number?</string>
    <string name="insert_tan_button_send_again">Request your Ident-Code again.</string>
    <string name="insert_tan_hint_enter_code">Enter Ident-Code</string>
    <string name="insert_tan_accept">Confirm</string>
    <string name="retrieve_tan_title">Request Ident-Code</string>
    <string name="retrieve_tan_content">Please check your mobile number and request your Ident-Code by SMS.</string>
    <string name="retrieve_tan_button">Request Ident-Code by SMS</string>
    <string name="result_screen_status_success">Identification Completed</string>
    <string name="result_screen_transaction_nr_title">Transaction Number</string>
    <string name="result_screen_transaction_nr_content">270 303 123</string>
    <string name="result_screen_transaction_name_title">Name</string>
    <string name="result_screen_transaction_name_content">John Doe</string>
    <string name="result_screen_button_retry">Try again</string>
    <string name="result_screen_button_done">Close app</string>
    <string name="photo_country_selection_title">Country</string>
    <string name="photo_country_selection_info">Choose the country that issued your identity document.</string>
    <string name="photo_country_selection_image_description">Flag</string>
    <string name="photo_process_overview_text">Please make all the photos listed below before submitting your data.</string>
    <string name="photo_process_overview_send_data_text">By tapping the button, you accept that the images will be transmitted and stored.</string>
    <string name="photo_process_overview_send_data_button">Submit data</string>
    <string name="photo_check_image_description">Userfoto</string>
    <string name="photo_check_retake_photo">Retake Picture</string>
    <string name="photo_check_save_photo">Save</string>
    <string name="photo_help_overlay_example">Beispiel:</string>
    <string name="photo_help_overlay_button_start">Take Picture</string>
    <string name="e_signature_sign_contract_header">Sign here</string>
    <string name="e_signature_resign_contract">Sign again</string>
    <string name="e_signature_sign_contract_description">Please draw your signature in the field above and tap the button to proceed.</string>
</resources>