<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_white_trans"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/insert_tan_title"
            android:textColor="@color/headline"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewRetrieveTanInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/insert_tan_text"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewForgotTan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/insert_tan_forgot_tan"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textViewInsertTan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/insert_tan_button_send_again"
            android:textColor="@color/link"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextInsertTan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/insert_tan_hint_enter_code"
            android:inputType="number"
            android:singleLine="true"/>

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/insert_tan_accept"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout><!-- From: file:/Users/abauer/Desktop/de.idnow.sdk/src/main/res/layout/view_insert_tan.xml -->