<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_result"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="de.idnow.sdk.Activities_ResultActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/imageViewStatus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:src="@drawable/green_check" >
            </ImageView>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_screen_status_success"
                android:textColor="@color/idnow_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewStatusExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/result_screen_status_success_extra"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTransactionNrTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_screen_transaction_nr_title"
                android:textColor="@color/idnow_green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTransactionNrContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/result_screen_transaction_nr_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_screen_transaction_name_title"
                android:textColor="@color/idnow_green"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewNameContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/result_screen_transaction_name_content"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="32dp"
                android:text="@string/result_screen_success_text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_selector"
                android:text="@string/result_screen_button_retry"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_selector"
                android:text="@string/result_screen_button_done"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>