<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.idnow.sdk.Activities_PhotoProcessOverviewActivity" >

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/photo_process_overview_text"
        android:textColor="@color/idnow_black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/linearLayoutSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/photo_process_overview_send_data_text" />

        <Button
            android:id="@+id/buttonSendData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/photo_process_overview_send_data_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewProcessList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutSendData"
        android:layout_below="@id/textViewIntro"
        android:fadeScrollbars="false" >
    </ListView>

</RelativeLayout>