<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/e_signature_sign_contract_header"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewResign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/action_sign_again"
            android:drawablePadding="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/e_signature_resign_contract"/>

        <LinearLayout
            android:id="@+id/drawingViewPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/e_signature_sign_contract_description"/>
    </LinearLayout>

</RelativeLayout><!-- From: file:/Users/abauer/Desktop/de.idnow.sdk/src/main/res/layout/view_sign_contract.xml -->