<RelativeLayout android:id="@+id/relativeLayoutScreen"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_white_trans"
                tools:context="de.idnow.sdk.Activities_PhotoCheckActivity">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo_check_image_description"/>

    <LinearLayout
        android:id="@+id/linearLayoutHideHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@color/background_white_trans">

        <Button
            android:id="@+id/buttonCloseHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/photo_help_overlay_button_start"
            android:textColor="@color/white"
            android:visibility="gone">
        </Button>
    </LinearLayout>

    <ScrollView
        android:id="@+id/linearLayoutHelpParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutHideHelp">

        <LinearLayout
            android:id="@+id/completeHelpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/relativeLayoutTitleExpander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageViewExpander"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/action_expand"/>

                <TextView
                    android:id="@+id/textViewHelpTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/imageViewExpander"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewHelpContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/linearLayoutHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textViewHelpDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/photo_help_overlay_example"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imageViewDocumentImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="left"
                    android:src="@drawable/idcard"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutHelpParent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonRetakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/photo_check_retake_photo"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonSavePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/photo_check_save_photo"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout><!-- From: file:/D:/workspace/IDnow/SDK/src/main/res/layout/activity_photo_check.xml -->